# Holmner6Axis

./: README.md
3D-models/FreeCad/: Assembly.FCStd  Axis1_MotorMount.FCStd  Axis1_Rod.FCStd  Axis1_RodStop.FCStd  Axis2_BottomBrackets.FCStd  Axis2_LowerArm.FCStd  BallBearing.FCStd  BasePlate.FCStd  Motor.FCStd  MotorCog.FCStd
3D-models/SolidWorks project/: Axis0_BottomPlate.SLDPRT  Axis1_Cog.SLDPRT  Axis1_CogHolder.SLDPRT  Axis2_Arm_1.SLDPRT  Axis2_Arm_2.SLDPRT  Axis2_Cog.SLDPRT  Axis2_Rod.SLDPRT  Axis3_BearingEnd.SLDPRT  Axis4_Arm_1_Left.SLDPRT  Axis4_Arm_1_Right.SLDPRT  Axis4_Arm_2_Left.SLDPRT  Axis4_MotorHolder_Right.SLDPRT  Axis4_RodHolder.SLDPRT  Axis5_Arm_1_Left.SLDPRT  Axis5_Arm_2_Left.SLDPRT  Axis5_Cog.SLDPRT  HolmnerBot_Assembly - Copy (2).SLDASM  HolmnerBot_Assembly - Copy (3).SLDASM  HolmnerBot_Assembly - Copy.SLDASM  HolmnerBot_Assembly.SLDASM  ShaftCoupler.SLDPRT
3D-models/SolidWorksProject/: Axis1_Rod.SLDPRT  Axis2_Holder.SLDPRT  Axis3_Rod.SLDPRT  Axis4_Arm_2_Right.SLDPRT  Axis4_Cog.SLDPRT  Axis4_Holder.SLDPRT  Axis4_MotorHolder_Left.SLDPRT  Axis4_Rod.SLDPRT  Axis4_RodEnd.SLDPRT  Axis5_Arm_Right.SLDPRT  Axis5_BearingHolder.SLDPRT  Axis5_Rod.SLDPRT  Axis6_MotorHolder.SLDPRT  BallBearing.SLDPRT  StepperMotor.SLDPRT
Atmega328/: main.c
Atmega328/MotorStepper1/: MotorStepper1.hex
Prototyping/ForwardAndInverseKinematics/: ForwardAndInverseKinematics.py
RaspberryPi/: build_linux.sh
RaspberryPi/Holmner6Axis/: CMakeLists.txt
RaspberryPi/Holmner6Axis/src/: main.cpp
RaspberryPi/source/: Application.cpp  Application.h  Command.cpp  Command.h  Robot.h  (+7 more)
(+1 files in other folders)
